--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.6.0",
     "framer-motion": "^10.16.5",
+    "lucide-react": "^0.301.0",
     "next": "14.0.3",
     "next-auth": "5.0.0-beta.3",
     "next-themes": "^0.2.1",
